--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,8 @@
     border-radius: 2px 25px 2px 25px;
     padding: .5% 1% .5% 1%;
     font-size: 14px;
+    border: 1px inset var(--blue);
+    font-weight: 600;
 }
 
 #now:hover {
@@ -68,17 +70,20 @@
 
 /*Scheduler Section*/
 
+
+
 /*Setting time styles*/
 .hour {
     color: var(--lightblue);
     font-size: 18px;
     margin: .5% 1% auto auto;
+    border: 1px inset var(--lightblue);
     border-radius: 20px 2px 20px 2px;
     background-color: var(--dark);
-    height: 40px;
-    padding-top: 10px;
-    font-weight: 900;
+    padding: 7px;
+    font-weight: 700;
     opacity: 70%;
+    width: 100%;
   }
   
   /*set a backup color scheme for text boxes*/
@@ -90,14 +95,7 @@
       opacity: 93%;
   }
   
-  .taskDue2 {
-      background-color: var(--light);
-      color: var(--darkblue);
-      border-radius: 6px 6px 20px 6px;
-      height: 5rem;
-      opacity: 93%;
-  }
-  
+
 
   /*Adding classes to colour past, present, future*/
 
