--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,13 +104,16 @@
 
   .past {
     background-color: var(--dark);
-    color: var(--light);
+    color: yellow;
     opacity: 30%;
     border-radius: 6px 6px 20px 6px;
     height: 2.5rem;
+    font-style: italic;
+    font-weight: 150;
+    overflow-y: scroll;
   }
 
-  .past:hover{
+   .past:hover{
     border: 1px outset var(--dark);
   }
   
@@ -120,21 +123,45 @@
     border: 1px outset var(--green);
     border-radius: 6px 6px 20px 6px;
     height: 5rem;
+    font-weight: 500;
+    font-size: 17px;
+    overflow-y: scroll;
   }
 
   .present:hover {
     border: 2px inset var(--green);
   }
   
+  .almost {
+    background-color: var(--red);
+    color: var(--light);
+    opacity: 80%;
+    border-radius: 6px 6px 20px 6px;
+    border: 3px dashed var(--green);
+    height: 2.5rem;
+    font-weight: 1000;
+    font-size: 22px;
+    overflow-y: scroll;
+  }
+
+  .almost:hover {
+    border: 5px dashed white;
+  }
+
     .future {
      background-color: wheat;
      opacity: 50%;
      border-radius: 6px 6px 20px 6px;
      height: 3rem;
+     font-size: 14.5px;
+     color:var(--darkblue);
+     font-weight: 350;
+     overflow-y: scroll;
   }
 
   .future:hover {
     border: 2px outset var(--red);
+    border-radius: 6px 6px 20px 6px;
   }
 
   /*Setting button styling*/
